--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Invisível</title>
+  <title>O Poder da Língua</title>
   <link rel="icon" id="favicon"
-        href="https://live.staticflickr.com/65535/54443254301_a5da23a006_w.jpg"
+        href="https://live.staticflickr.com/65535/54670396957_e365bfa7f7_n.jpg"
         sizes="300x300" type="image/jpeg">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
@@ -327,7 +327,7 @@
 
   <div class="cover">
     <img id="cover-image"
-         src="https://live.staticflickr.com/65535/54640640942_0a4c353a9a_n.jpg"
+         src="https://live.staticflickr.com/65535/54670396957_e365bfa7f7_n.jpg"
          alt="Capa do Álbum" />
   </div>
 
@@ -338,7 +338,7 @@
           Selecione um Capítulo
         </div>
         <div class="album-title" id="album-title">
-          Invisível
+          O Poder da Língua
         </div>
         <button class="menu-btn" id="menu-btn">⋮</button>
       </div>
@@ -416,19 +416,15 @@
            crossorigin="anonymous"></audio>
 
     <div class="playlist" id="playlist">
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/1.MP3" data-title="1. Capítulo 1">1. Capítulo 1</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20002%20cap%202%20-%20Visto%20e%20celebrado%20%5Bych4IkNzRSE%5D.mp3" data-title="2. Capítulo 2">2. Capítulo 2</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20003%20cap%203%20-%20Vivendo%20uma%20hist%C3%B3ria%20que%20n%C3%A3o%20hav%C3%ADamos%20planejado%20%5Bych4IkNzRSE%5D.mp3" data-title="3. Capítulo 3">3. Capítulo 3</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20004%20cap%204%20-%20Amor%20derramado%20%5Bych4IkNzRSE%5D.mp3" data-title="4. Capítulo 4">4. Capítulo 4</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20005%20cap%205%20-%20Descoberto%20%5Bych4IkNzRSE%5D.mp3" data-title="5. Capítulo 5">5. Capítulo 5</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20006%20cap%206%20-%20O%20convite%20a%20maravilhar-se%20%5Bych4IkNzRSE%5D.mp3" data-title="6. Capítulo 6">6. Capítulo 6</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20007%20cap%207%20-%20A%20extravag%C3%A2ncia%20secreta%20%5Bych4IkNzRSE%5D.mp3" data-title="7. Capítulo 7">7. Capítulo 7</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20008%20cao%208%20-%20As%20necessidades%20ao%20nosso%20redor%20%5Bych4IkNzRSE%5D.mp3" data-title="8. Capítulo 8">8. Capítulo 8</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20009%20cap%209%20-%20Vozes%20%5Bych4IkNzRSE%5D.mp3" data-title="9. Capítulo 9">9. Capítulo 9</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20010%20cap%2010%20-%20Tempos%20de%20sede%20%5Bych4IkNzRSE%5D.mp3" data-title="10. Capítulo 10">10. Capítulo 10</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20011%20cap%2011%20Deus%20%C3%A9%20por%20n%C3%B3s%20%5Bych4IkNzRSE%5D.mp3" data-title="11. Capítulo 11">11. Capítulo 11</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20012%20cap%2012%20Sussurros%20santos%20%5Bych4IkNzRSE%5D.mp3" data-title="12. Capítulo 12">12. Capítulo 12</div>
-        <div class="playlist-item" data-src="https://archive.org/download/invisivel-sara-hagerty-008-cao-8-as-necessidades-ao-nosso-redor-ych-4-ik-nz-rse/Invis%C3%ADvel%20-%20Sara%20Hagerty%20-%20013%20cap%2013%20-%20O%20caminho%20escondido%20%5Bych4IkNzRSE%5D.mp3" data-title="13. Capítulo 13">13. Capítulo 13</div>
+        <div class="playlist-item" data-src="https://archive.org/download/o-poder-da-lingua-gary-haynes-003-cap-2-o-abuso-do-nome-do-senhor-q-y-6t-4-aow-8-b-8/O%20poder%20da%20li%CC%81ngua%20-%20Gary%20Haynes%20-%20001%20prefa%CC%81cio%20%5BqY6t4AOW8B8%5D.MP3" data-title="1. Prefácio">1. Prefácio</div>
+        <div class="playlist-item" data-src="https://archive.org/download/o-poder-da-lingua-gary-haynes-003-cap-2-o-abuso-do-nome-do-senhor-q-y-6t-4-aow-8-b-8/O%20poder%20da%20li%CC%81ngua%20-%20Gary%20Haynes%20-%20002%20Cap%201%20O%20poder%20da%20morte%20%5BqY6t4AOW8B8%5D.mp3" data-title="2. O poder da morte">2. O poder da morte</div>
+        <div class="playlist-item" data-src="https://archive.org/download/o-poder-da-lingua-gary-haynes-003-cap-2-o-abuso-do-nome-do-senhor-q-y-6t-4-aow-8-b-8/O%20poder%20da%20li%CC%81ngua%20-%20Gary%20Haynes%20-%20003%20Cap%202%20O%20abuso%20do%20nome%20do%20Senhor%20%5BqY6t4AOW8B8%5D.mp3" data-title="3. O abuso do nome do Senhor">3. O abuso do nome do Senhor</div>
+        <div class="playlist-item" data-src="https://archive.org/download/o-poder-da-lingua-gary-haynes-003-cap-2-o-abuso-do-nome-do-senhor-q-y-6t-4-aow-8-b-8/O%20poder%20da%20li%CC%81ngua%20-%20Gary%20Haynes%20-%20004%20Cap%203%20A%20li%CC%81ngua%EF%BC%9A%20uma%20forc%CC%A7a%20sobrenatural%20%5BqY6t4AOW8B8%5D.mp3" data-title="4. A língua: uma força sobrenatural">4. A língua: uma força sobrenatural</div>
+        <div class="playlist-item" data-src="https://archive.org/download/o-poder-da-lingua-gary-haynes-003-cap-2-o-abuso-do-nome-do-senhor-q-y-6t-4-aow-8-b-8/O%20poder%20da%20li%CC%81ngua%20-%20Gary%20Haynes%20-%20005%20Cap%204%20Liberando%20milagres%20financeiros%20%5BqY6t4AOW8B8%5D.mp3" data-title="5. Liberando milagres financeiros">5. Liberando milagres financeiros</div>
+        <div class="playlist-item" data-src="https://archive.org/download/o-poder-da-lingua-gary-haynes-003-cap-2-o-abuso-do-nome-do-senhor-q-y-6t-4-aow-8-b-8/O%20poder%20da%20li%CC%81ngua%20-%20Gary%20Haynes%20-%20006%20Cap%205%20Poder%20para%20expulsar%20demo%CC%82nios%20e%20curar%20%5BqY6t4AOW8B8%5D.mp3" data-title="6. Poder para expulsar demônios e curar">6. Poder para expulsar demônios e curar</div>
+        <div class="playlist-item" data-src="https://archive.org/download/o-poder-da-lingua-gary-haynes-003-cap-2-o-abuso-do-nome-do-senhor-q-y-6t-4-aow-8-b-8/O%20poder%20da%20li%CC%81ngua%20-%20Gary%20Haynes%20-%20007%20Cap%206%20Palavras%20que%20destroem%20%5BqY6t4AOW8B8%5D.mp3" data-title="7. Palavras que destroem">7. Palavras que destroem</div>
+        <div class="playlist-item" data-src="https://archive.org/download/o-poder-da-lingua-gary-haynes-003-cap-2-o-abuso-do-nome-do-senhor-q-y-6t-4-aow-8-b-8/O%20poder%20da%20li%CC%81ngua%20-%20Gary%20Haynes%20-%20008%20Cap%207%20O%20poder%20da%20vida%20%5BqY6t4AOW8B8%5D.mp3" data-title="8. O poder da vida">8. O poder da vida</div>
+        <div class="playlist-item" data-src="https://archive.org/download/o-poder-da-lingua-gary-haynes-003-cap-2-o-abuso-do-nome-do-senhor-q-y-6t-4-aow-8-b-8/O%20poder%20da%20li%CC%81ngua%20-%20Gary%20Haynes%20-%20009%20Epi%CC%81logo%20%5BqY6t4AOW8B8%5D.mp3" data-title="9. Epílogo">9. Epílogo</div>
     </div>
   </div>
 
@@ -453,7 +449,7 @@
         <input type="text" id="report-ref" value="Arauto" readonly>
       </label>
       <label>Livro:
-        <input type="text" id="report-book" value="Invisível" readonly>
+        <input type="text" id="report-book" value="O Poder da Língua" readonly>
       </label>
       <label>Nome:
         <input type="text" id="report-name" required>
@@ -518,14 +514,14 @@
         return;
       }
       const title = tracks[currentIndex].dataset.title;
-      document.title = `${title} – Invisível`;
+      document.title = `${title} – O Poder da Língua`;
       audioPlayer.playbackRate = parseFloat(speedSelect.value);
       document.getElementById('track-title').textContent = title;
 
       if ('mediaSession' in navigator) {
         navigator.mediaSession.metadata = new MediaMetadata({
           title,
-          artist: 'Invisível',
+          artist: 'O Poder da Língua',
           artwork: [{ src: coverImage.src, sizes:'300x300', type:'image/jpeg' }]
         });
         navigator.mediaSession.playbackState = isPlaying ? 'playing' : 'paused';
@@ -702,7 +698,7 @@
       buyBookBtn.addEventListener('click', (e) => {
         e.stopPropagation();
         menu.style.display = 'none';
-        const bookUrl = 'https://amzn.to/45Z6ZSA'; 
+        const bookUrl = 'https://amzn.to/3IG5Fuf'; 
         window.open(bookUrl, '_blank');
       });
     }
